# ftia-coroutine-2024

./: callback-hell.cpp  coro-event.lua  coro.lua  switch-case-coroutine.cpp
ae/: ae.c  main.c
boost-test/: meson.build  test.cpp
boost-test/.cache/clangd/index/: test.cpp.2A4DA825B95A15C4.idx
stdexec-test/: CMakeLists.txt  README.txt  example.cpp
